# CUDA-learn

./: README.md
cuda_examples/erosion/: Makefile  erosion.cu  erosion.h  main.cpp
cuda_examples/erosion_profile/: CMakeLists.txt  README.md
cuda_examples/erosion_profile/include/: cpu.hpp  gpu.hpp  utils.hpp
cuda_examples/erosion_profile/profiling/: run_profile.sh
cuda_examples/erosion_profile/srcs/: cpu.cpp  gpu.cu  main.cpp
cuda_examples/erosion_profile/tools/: CUDA_Occupancy_Calculator.xls
cuda_examples/erosion_profile/tracing/: run_trace.sh
section1/: 10_index_calculation_for_2D_grid.cu  11_index_calculation_for_2D_grid_2D_thread_blocks.cu  12_memory_transfer.cu  14_sum_array.cu  17_device_query.cu  4_hello_cuda.cu  6_organization_of_threads.cu  7_organization_of_threads.cu  9_unique_index_calculation_threadIdx_blockIdx_blockDim.cu  README.md  build.sh  cuda_device_set.h  print_my_index.cu  sec1_test.cu
section2/: 10_reduction_with_unrolling_loop.cu  11_unrolling_warps_unroll.cu  12_reduction_complete_unrolling.cu  13_reduction_performance_comparison.cu  13_reduction_with_complete_unroll_and_template_func.cu  14_dynamic_parallelism.cu  14_reduction_with_dynamic_parallelism.cu  2_warp_id_and_thread_id.cu  3_warp_divergence.cu  6_device_query_in_occupancy.cu  6_occupancy_test.cu  7_sum_array.cu  8_synchronization_and_reduction.cu  9_reduction_interleaved_pairs.cu  9_reduction_warp_divergence_improved.cu  README.md  build.sh  common.h  test_code.cu
